--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
 
         </div>
         <div id="second">
-            <div class="element" id="element1"><img src="/images/myntra.png" alt=""><h1>E-COMMERCE WEBSITE</h1><a class="weblink" href="https://prachi309.github.io/myntra/" target="_blank"><i class="ri-arrow-right-up-line"></i></a></div>
+            <div class="element" id="element1"><img src="images/myntra.png" alt=""><h1>E-COMMERCE WEBSITE</h1><a class="weblink" href="https://prachi309.github.io/myntra/" target="_blank"><i class="ri-arrow-right-up-line"></i></a></div>
            
-            <div class="element" id="element2"><img src="/images/whack-game.png" alt=""><h1>WHACK A MOLE GAME</h1><a class="weblink" href="" target="_blank"><i class="ri-arrow-right-up-line"></i></a></div>
-             <div class="element" id="element3"><img src="/images/qrcode.png" alt=""><h1>QR CODE GENERATOR</h1><a class="weblink" href="https://prachi309.github.io/QR-Generator/" target="_blank"><i class="ri-arrow-right-up-line"></i></a></div>
+            <div class="element" id="element2"><img src="images/whack-game.png" alt=""><h1>WHACK A MOLE GAME</h1><a class="weblink" href="" target="_blank"><i class="ri-arrow-right-up-line"></i></a></div>
+             <div class="element" id="element3"><img src="images/qrcode.png" alt=""><h1>QR CODE GENERATOR</h1><a class="weblink" href="https://prachi309.github.io/QR-Generator/" target="_blank"><i class="ri-arrow-right-up-line"></i></a></div>
             <div class="element lastelement" ></div>
 
         </div>
         <div id="about">
-            <div id="aboutimage"><img src="/images/myimg.jpg" alt=""></div>
+            <div id="aboutimage"><img src="images/myimg.jpg" alt=""></div>
             <div id="abouttext"><h5>(About me)</h5>
             <p>I am in my sophomore year and currenty studying Web Development.I love to learn things which have real life applications. When you can't find me at my study table or in college,you'll probably find me trying to learn a new choreo that I just discovered, netflixing or sleeping.
                  Being a sophomore I am still relatively new to the field but I am actively building my skills and I am confident that I can rise upto challlenges expected to you. If you are looking for someone who is a fast learner, devoted and driven you are at the right place. 
