--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div id="second">
             <div class="element" id="element1"><img src="images/myntra.png" alt=""><h1>E-COMMERCE WEBSITE</h1><a class="weblink" href="https://prachi309.github.io/myntra/" target="_blank"><i class="ri-arrow-right-up-line"></i></a></div>
            
-            <div class="element" id="element2"><img src="images/whack-game.png" alt=""><h1>WHACK A MOLE GAME</h1><a class="weblink" href="" target="_blank"><i class="ri-arrow-right-up-line"></i></a></div>
+            <div class="element" id="element2"><img src="images/whack-game.png" alt="https://prachi309.github.io/Whack-a-mole/"><h1>WHACK A MOLE GAME</h1><a class="weblink" href="" target="_blank"><i class="ri-arrow-right-up-line"></i></a></div>
              <div class="element" id="element3"><img src="images/qrcode.png" alt=""><h1>QR CODE GENERATOR</h1><a class="weblink" href="https://prachi309.github.io/QR-Generator/" target="_blank"><i class="ri-arrow-right-up-line"></i></a></div>
             <div class="element lastelement" ></div>
 
